# voiddrop

./: .gitignore  Cargo.toml  Dockerfile  README.md  checkpoint.md  combinations.txt  fly.toml  install.ps1  uninstall.ps1
vb/: Cargo.toml
vb/src/: main.rs
vb/src/cli/: args.rs
vb/src/commands/: receive.rs  send.rs
vb/src/transfer/: crypto.rs  mod.rs  pipeline.rs  server.rs  session.rs
vb/src/ui/: banner.rs  colors.rs  mod.rs  progress.rs  qr.rs
vb/src/util/: clipboard.rs  helpers.rs  mod.rs
voiddrop-server/: Cargo.toml
voiddrop-server/src/: main.rs  session.rs
